--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "autostart": "nodemon ./bin/www"
+    "autostart": "nodemon ./bin/www",
+    "test": "nyc --reporter=text mocha http://localhost:4200 http://localhost:9876 mongodb://localhost:27017/fyp-db ./tests/test.spec.js --reporter mocha-junit-reporter"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -13,6 +14,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "faker": "^5.5.3",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
@@ -21,6 +23,11 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.0.3",
+    "mocha-junit-reporter": "^2.0.0",
+    "nodemon": "^2.0.7",
+    "nyc": "^15.1.0"
   }
 }
