--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "autostart": "nodemon ./bin/www",
-    "test": "nyc --reporter=text mocha http://localhost:4200 http://localhost:9876 mongodb://localhost:27017/fyp-db ./tests/test.spec.js --reporter mocha-junit-reporter"
+    "test": "nyc --reporter=text mocha http://localhost:4200 http://localhost:9876 http://localhost mongodb://localhost:27017/fyp-db ./tests/test.spec.js --reporter mocha-junit-reporter"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
