--- a/manifests/staging-api-deployment.yml
+++ b/manifests/staging-api-deployment.yml
@@ -35,7 +35,7 @@ spec:
           ports:
             - containerPort: 27017
           volumeMounts:
-          - mountPath: "mnt/azure-staging"
+          - mountPath: "/data/db"
             name: volume-staging
       volumes:
         - name: volume-staging
